
[package]
authors = ["Marijn van der Werf <marijn@vdwerf.net>"]
edition = "2021"
name = "rabbitizer"
version = "1.14.3"
description = "MIPS instruction decoder - TypeScript/Node.js bindings"
license = "MIT"
repository = "https://github.com/marijnvdwerf/rabbitizer-ts"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
rabbitizer = "1.14.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
